# Physics-Cpp

./: .gitignore  CMakeLists.txt  README.txt  imgui.ini  physics_simulation.code-workspace
.VSCodeCounter/2025-07-18_15-18-07/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-18_15-19-08/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-18_15-46-09/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-18_15-46-22/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-26_19-25-14/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-26_19-25-33/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: Object_Graphic.aseprite
src/apps/main/: main.cpp
src/exercises/: exercises copy.cpp  exercises copy.h  exercises.cpp  exercises.h
src/external_libs/glad/: glad.c  glad.h
src/external_libs/imgui/: imgui.cpp
src/external_libs/imgui_src/backends/: imgui_impl_sdlrenderer2.cpp
src/external_libs/imgui_src/docs/: CHANGELOG.txt  EXAMPLES.md
src/gl_aux/: cube.cpp  cube.h  gl_aux.h  quad.cpp  quad.h  vertex.h
src/gl_core/: CMakeLists.txt  batch_renderer.cpp  batch_renderer.h  camera.cpp  camera.h  context.cpp  context.h  drawer.cpp  drawer.h  engine.cpp  engine.h  gl_core.h  gpu_config.cpp  gpu_config.h  gpu_config_copy.cpp  gui.cpp  gui.h  index_buffer.cpp  index_buffer.h  mesh.cpp  mesh.h  obj_mans.cpp  obj_mans.h  physics_object.cpp  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  rigidbody.cpp  rigidbody.h  scene.cpp  scene.h  services.cpp  services.h  shader.cpp  shader.h  shader_parser.cpp  shader_parser.h  shape_dict.cpp  shape_dict.h  (+22 more)
src/gl_core/asset/: CMakeLists.txt  material.cpp  material.h  mesh.cpp  mesh.h  object.cpp  object.h  shader.cpp  shader.h  texture.cpp  texture.h
src/gl_core/cache/: CMakeLists.txt  material_cache.cpp  material_cache.h  mesh_cache.cpp  mesh_cache.h  shader_cache.cpp  shader_cache.h
src/gl_core/core/: CMakeLists.txt  context.cpp  context.h  engine.cpp  engine.h  input.cpp  input.h  object.cpp  object.h  services.cpp  services.h  types.h  vertex.h
src/gl_core/misc/: CMakeLists.txt  batch_renderer.cpp  batch_renderer.h  physics_object.cpp  physics_object.h  tensor.cpp
src/gl_core/physics/: CMakeLists.txt  rigidbody.cpp  rigidbody.h
src/gl_core/scene/: CMakeLists.txt  camera.cpp  camera.h  observer.cpp  observer.h  scene.cpp  scene.h
src/gl_core/servers/: CMakeLists.txt  renderer.cpp  renderer.h
src/gui/: gui.cpp  gui.h
src/shader_class/: shader_class.h
src/shader_source/: batch_render.fs  batch_render.vs  default.fs  default.vs  directionally_challenged.fs  directionally_challenged.vs  fragment_ambient.fs  fragment_lighting_shader.fs  fragment_shader_01_GLtriangles.fs  fragment_shader_01_practice.fs  fragment_shader_02_GLtriangles.fs  fragment_shader_02_practice.fs  frame_buffer.fs  frame_buffer.vs  light_box.fs  light_box.vs  normal_vectors.gs  phong_lighting_model.fs  phong_lighting_model.vs  point_light.fs  point_light.vs  post_process.fs  post_process.vs  vertex_lighting_shader.vs  vertex_shader_GLtriangles.vs  vertex_shader_practice.vs
src/triangle/: triangle.cpp  triangle.h
src/tutorial/: tutorial.cpp  tutorial.h
src/user_input/: user_input.cpp  user_input.h
